ablation study code works.

--- a/run-ablation-experiments-fjord.ipynb
+++ b/run-ablation-experiments-fjord.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Run Remove Features Ablations on Fjord\n",
+    "# Run Ablations on Fjord\n",
     "\n",
     "## Imports"
    ]
@@ -18,21 +18,7 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "from sklearn.model_selection import train_test_split\n",
-    "import torch\n",
     "import pandas as pd\n",
-    "from anytree import Node\n",
-    "from anytree.importer import JsonImporter\n",
-    "import torch.nn as nn\n",
-    "from collections import defaultdict\n",
-    "from torch.utils.data import Dataset, DataLoader\n",
-    "import numpy as np\n",
-    "from PIL import Image\n",
-    "from models.ablations.remove_features.hierarchical_cnn import HierarchicalCNN\n",
-    "from utils.custom_dataset import CustomDataset\n",
-    "from sklearn.metrics import f1_score\n",
-    "import numpy as np\n",
-    "import torch\n",
-    "\n",
     "\n",
     "# extract test data\n",
     "df = pd.read_parquet('data/segmented-objects-dataset.parquet')\n",
@@ -111,25 +97,150 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                      Ablation  Alpha    binary     class     genus   species\n",
-      "0              remove_features    0.0  0.657125  0.873903  0.905544  0.911923\n",
-      "1              remove_features    0.2  0.657584  0.875434  0.908512  0.913592\n",
-      "2              remove_features    0.5  0.657159  0.874282  0.906852  0.912783\n",
-      "3              remove_features    0.8  0.658249  0.875287  0.908148  0.914235\n",
-      "4              remove_features    1.0  0.658828  0.876878  0.909654  0.915180\n",
-      "5  decreased_branch_complexity    0.0  0.659902  0.880391  0.915804  0.921533\n",
-      "6  decreased_branch_complexity    0.2  0.660929  0.881970  0.916464  0.921911\n",
-      "7  decreased_branch_complexity    0.5  0.660563  0.880007  0.914963  0.921400\n",
-      "8  decreased_branch_complexity    0.8  0.661007  0.881365  0.915814  0.920551\n",
-      "9  decreased_branch_complexity    1.0  0.660638  0.881578  0.915913  0.922165\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Ablation</th>\n",
+       "      <th>Alpha</th>\n",
+       "      <th>binary</th>\n",
+       "      <th>class</th>\n",
+       "      <th>genus</th>\n",
+       "      <th>species</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>remove_features</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.657125</td>\n",
+       "      <td>0.873903</td>\n",
+       "      <td>0.905544</td>\n",
+       "      <td>0.911923</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>remove_features</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>0.657584</td>\n",
+       "      <td>0.875434</td>\n",
+       "      <td>0.908512</td>\n",
+       "      <td>0.913592</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>remove_features</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.657159</td>\n",
+       "      <td>0.874282</td>\n",
+       "      <td>0.906852</td>\n",
+       "      <td>0.912783</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>remove_features</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>0.658249</td>\n",
+       "      <td>0.875287</td>\n",
+       "      <td>0.908148</td>\n",
+       "      <td>0.914235</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>remove_features</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.658828</td>\n",
+       "      <td>0.876878</td>\n",
+       "      <td>0.909654</td>\n",
+       "      <td>0.915180</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>decreased_branch_complexity</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.659902</td>\n",
+       "      <td>0.880391</td>\n",
+       "      <td>0.915804</td>\n",
+       "      <td>0.921533</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>decreased_branch_complexity</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>0.660929</td>\n",
+       "      <td>0.881970</td>\n",
+       "      <td>0.916464</td>\n",
+       "      <td>0.921911</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>decreased_branch_complexity</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.660563</td>\n",
+       "      <td>0.880007</td>\n",
+       "      <td>0.914963</td>\n",
+       "      <td>0.921400</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>decreased_branch_complexity</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>0.661007</td>\n",
+       "      <td>0.881365</td>\n",
+       "      <td>0.915814</td>\n",
+       "      <td>0.920551</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>decreased_branch_complexity</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.660638</td>\n",
+       "      <td>0.881578</td>\n",
+       "      <td>0.915913</td>\n",
+       "      <td>0.922165</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      Ablation  Alpha    binary     class     genus   species\n",
+       "0              remove_features    0.0  0.657125  0.873903  0.905544  0.911923\n",
+       "1              remove_features    0.2  0.657584  0.875434  0.908512  0.913592\n",
+       "2              remove_features    0.5  0.657159  0.874282  0.906852  0.912783\n",
+       "3              remove_features    0.8  0.658249  0.875287  0.908148  0.914235\n",
+       "4              remove_features    1.0  0.658828  0.876878  0.909654  0.915180\n",
+       "5  decreased_branch_complexity    0.0  0.659902  0.880391  0.915804  0.921533\n",
+       "6  decreased_branch_complexity    0.2  0.660929  0.881970  0.916464  0.921911\n",
+       "7  decreased_branch_complexity    0.5  0.660563  0.880007  0.914963  0.921400\n",
+       "8  decreased_branch_complexity    0.8  0.661007  0.881365  0.915814  0.920551\n",
+       "9  decreased_branch_complexity    1.0  0.660638  0.881578  0.915913  0.922165"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -221,7 +332,275 @@
     "\n",
     "# Convert results to DataFrame\n",
     "results_df = pd.DataFrame(results)\n",
-    "print(results_df)"
+    "results_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Run Ablations on COCO\n",
+    "\n",
+    "## Imports"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import torch\n",
+    "from torch.utils.data import DataLoader\n",
+    "from sklearn.metrics import f1_score\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from anytree.importer import JsonImporter\n",
+    "from collections import defaultdict\n",
+    "from utils.custom_dataset import CustomDatasetCoco\n",
+    "\n",
+    "def run_coco_experiment(data_path, classes_file, model_path, ablation, root_coco):\n",
+    "    df = pd.read_parquet(data_path)\n",
+    "    _, test_df = train_test_split(df, test_size=0.3, random_state=42)\n",
+    "\n",
+    "    object_names = [line.strip() for line in open(classes_file, 'r')]\n",
+    "    subcategory_names, category_names, binary_names = [], [], []\n",
+    "    for node in root_coco.descendants:\n",
+    "        if node.rank == 'subcategory':\n",
+    "            subcategory_names.append(node.name)\n",
+    "        elif node.rank == 'category':\n",
+    "            category_names.append(node.name)\n",
+    "        elif node.rank == 'binary':\n",
+    "            binary_names.append(node.name)\n",
+    "\n",
+    "    rank_counts = defaultdict(int)\n",
+    "    for node in root_coco.descendants:\n",
+    "        rank_counts[node.rank] += 1\n",
+    "    num_classes_hierarchy = [rank_counts['binary'], rank_counts['category'], rank_counts['subcategory'], rank_counts['object']]\n",
+    "\n",
+    "    if ablation == 'remove_features':\n",
+    "        from models.ablations.remove_features.hierarchical_cnn import HierarchicalCNN\n",
+    "        model = HierarchicalCNN(num_classes_hierarchy)\n",
+    "    else:\n",
+    "        from models.ablations.decreased_branch_complexity.hierarchical_cnn import HierarchicalCNN\n",
+    "        num_additional_features = 3  # e.g., conf, iou, pred_species\n",
+    "        model = HierarchicalCNN(num_classes_hierarchy, num_additional_features)\n",
+    "\n",
+    "    model.load_state_dict(torch.load(model_path))\n",
+    "    device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
+    "    model.to(device)\n",
+    "    model.eval()\n",
+    "\n",
+    "    test_dataset = CustomDatasetCoco(test_df, object_names, subcategory_names, category_names, binary_names, root_coco)\n",
+    "    test_loader = DataLoader(test_dataset, batch_size=32, shuffle=False)\n",
+    "\n",
+    "    true_labels = {level: [] for level in ['binary', 'category', 'subcategory', 'object']}\n",
+    "    predictions = {level: [] for level in ['binary', 'category', 'subcategory', 'object']}\n",
+    "\n",
+    "    with torch.no_grad():\n",
+    "        for images, conf, iou, pred_species, species_index, genus_index, class_index, binary_index in test_loader:\n",
+    "            images, conf, iou, pred_species = [x.to(device) for x in [images, conf, iou, pred_species]]\n",
+    "\n",
+    "            outputs = model(images, conf, iou, pred_species) if ablation != 'remove_features' else model(images)\n",
+    "\n",
+    "            for i, output in enumerate(outputs):\n",
+    "                _, predicted = torch.max(output, 1)\n",
+    "                level = ['binary', 'category', 'subcategory', 'object'][i]\n",
+    "                predictions[level].extend(predicted.cpu().numpy())\n",
+    "\n",
+    "            # Store true labels directly from the DataLoader\n",
+    "            true_labels['binary'].extend(binary_index.cpu().numpy())\n",
+    "            true_labels['category'].extend(class_index.cpu().numpy())\n",
+    "            true_labels['subcategory'].extend(genus_index.cpu().numpy())\n",
+    "            true_labels['object'].extend(species_index.cpu().numpy())\n",
+    "\n",
+    "    f1_scores = {level: f1_score(true_labels[level], predictions[level], average='macro') for level in ['binary', 'category', 'subcategory', 'object']}\n",
+    "    return f1_scores\n",
+    "\n",
+    "# Populate Taxonomy for COCO\n",
+    "importer = JsonImporter()\n",
+    "root_coco = importer.read(open('data/coco.json', 'r'))\n",
+    "\n",
+    "# Paths and setup for COCO\n",
+    "data_path = 'data/coco-segmented-objects-dataset.parquet'\n",
+    "classes_file = '/mnt/RAID/datasets/coco/classes.txt'\n",
+    "ablations = ['remove_features', 'decreased_branch_complexity']\n",
+    "alpha_values = [0, 0.2, 0.5, 0.8, 1]\n",
+    "\n",
+    "# Run experiments and collect results for COCO\n",
+    "coco_results = []\n",
+    "for ablation in ablations:\n",
+    "    for alpha in alpha_values:\n",
+    "        model_path = f'models/ablations/{ablation}/weights-coco/best_model_alpha_{alpha:.2f}.pth'\n",
+    "        f1_scores = run_coco_experiment(data_path, classes_file, model_path, ablation, root_coco)\n",
+    "        coco_results.append({'Ablation': ablation, 'Alpha': alpha, **f1_scores})\n",
+    "\n",
+    "# Convert results to DataFrame\n",
+    "coco_results_df = pd.DataFrame(coco_results)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Ablation</th>\n",
+       "      <th>Alpha</th>\n",
+       "      <th>binary</th>\n",
+       "      <th>category</th>\n",
+       "      <th>subcategory</th>\n",
+       "      <th>object</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>remove_features</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.350832</td>\n",
+       "      <td>0.242530</td>\n",
+       "      <td>0.122490</td>\n",
+       "      <td>0.009423</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>remove_features</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>0.348568</td>\n",
+       "      <td>0.294291</td>\n",
+       "      <td>0.118532</td>\n",
+       "      <td>0.009422</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>remove_features</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.310266</td>\n",
+       "      <td>0.253904</td>\n",
+       "      <td>0.117725</td>\n",
+       "      <td>0.009396</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>remove_features</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>0.383039</td>\n",
+       "      <td>0.274211</td>\n",
+       "      <td>0.121491</td>\n",
+       "      <td>0.009321</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>remove_features</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.360689</td>\n",
+       "      <td>0.297815</td>\n",
+       "      <td>0.117013</td>\n",
+       "      <td>0.009323</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>decreased_branch_complexity</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.623512</td>\n",
+       "      <td>0.197828</td>\n",
+       "      <td>0.077285</td>\n",
+       "      <td>0.550917</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>decreased_branch_complexity</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>0.618092</td>\n",
+       "      <td>0.023593</td>\n",
+       "      <td>0.070018</td>\n",
+       "      <td>0.512723</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>decreased_branch_complexity</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.626669</td>\n",
+       "      <td>0.120767</td>\n",
+       "      <td>0.029780</td>\n",
+       "      <td>0.588352</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>decreased_branch_complexity</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>0.625116</td>\n",
+       "      <td>0.203489</td>\n",
+       "      <td>0.010860</td>\n",
+       "      <td>0.595456</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>decreased_branch_complexity</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.623318</td>\n",
+       "      <td>0.134768</td>\n",
+       "      <td>0.029645</td>\n",
+       "      <td>0.521769</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      Ablation  Alpha    binary  category  subcategory  \\\n",
+       "0              remove_features    0.0  0.350832  0.242530     0.122490   \n",
+       "1              remove_features    0.2  0.348568  0.294291     0.118532   \n",
+       "2              remove_features    0.5  0.310266  0.253904     0.117725   \n",
+       "3              remove_features    0.8  0.383039  0.274211     0.121491   \n",
+       "4              remove_features    1.0  0.360689  0.297815     0.117013   \n",
+       "5  decreased_branch_complexity    0.0  0.623512  0.197828     0.077285   \n",
+       "6  decreased_branch_complexity    0.2  0.618092  0.023593     0.070018   \n",
+       "7  decreased_branch_complexity    0.5  0.626669  0.120767     0.029780   \n",
+       "8  decreased_branch_complexity    0.8  0.625116  0.203489     0.010860   \n",
+       "9  decreased_branch_complexity    1.0  0.623318  0.134768     0.029645   \n",
+       "\n",
+       "     object  \n",
+       "0  0.009423  \n",
+       "1  0.009422  \n",
+       "2  0.009396  \n",
+       "3  0.009321  \n",
+       "4  0.009323  \n",
+       "5  0.550917  \n",
+       "6  0.512723  \n",
+       "7  0.588352  \n",
+       "8  0.595456  \n",
+       "9  0.521769  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "coco_results_df"
    ]
   }
  ],
