hierarcical CNN activations added.

--- a/hierarcical-cnn-visualisation.ipynb
+++ b/hierarcical-cnn-visualisation.ipynb
@@ -6,6 +6,8 @@
    "source": [
     "# Visualise Trained Pytorch model and results\n",
     "\n",
+    "This notebook is used for visualising activations and class activations.\n",
+    "\n",
     "## Import libraries and plot training"
    ]
   },
@@ -251,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -383,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
