Updated Yolov8 experimental script

--- a/experimental-data.ipynb
+++ b/experimental-data.ipynb
@@ -6,13 +6,16 @@
    "source": [
     "# Visualise experimental data\n",
     "\n",
-    "The data is collected though several runs in the notebook *hierarcical-cnn-visualisation-coco.ipynb*\n",
-    "and *hierarcical-cnn-visualisation.ipynb*"
+    "To run this script. \n",
+    "\n",
+    "scripts/train-yolov8.py must have been executed such that Yolo v8 experimental data is ready.\n",
+    "\n",
+    "The data is collected though the notebook *run-experiments.ipynb*."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
