added more complex branchCNN and attention to hierarchicanCNN

--- a/run-experiments.ipynb
+++ b/run-experiments.ipynb
@@ -68,7 +68,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "odict_keys(['conv1.0.weight', 'conv1.0.bias', 'conv1.1.weight', 'conv1.1.bias', 'conv1.1.running_mean', 'conv1.1.running_var', 'conv1.1.num_batches_tracked', 'conv1.3.weight', 'conv1.3.bias', 'conv1.4.weight', 'conv1.4.bias', 'conv1.4.running_mean', 'conv1.4.running_var', 'conv1.4.num_batches_tracked', 'conv1.7.fc.0.weight', 'conv1.7.fc.2.weight', 'conv1.8.conv1.weight', 'conv2.0.weight', 'conv2.0.bias', 'conv2.1.weight', 'conv2.1.bias', 'conv2.1.running_mean', 'conv2.1.running_var', 'conv2.1.num_batches_tracked', 'conv2.3.weight', 'conv2.3.bias', 'conv2.4.weight', 'conv2.4.bias', 'conv2.4.running_mean', 'conv2.4.running_var', 'conv2.4.num_batches_tracked', 'conv2.7.fc.0.weight', 'conv2.7.fc.2.weight', 'conv2.8.conv1.weight', 'conv3.0.weight', 'conv3.0.bias', 'conv3.1.weight', 'conv3.1.bias', 'conv3.1.running_mean', 'conv3.1.running_var', 'conv3.1.num_batches_tracked', 'conv3.3.weight', 'conv3.3.bias', 'conv3.4.weight', 'conv3.4.bias', 'conv3.4.running_mean', 'conv3.4.running_var', 'conv3.4.num_batches_tracked', 'conv3.7.fc.0.weight', 'conv3.7.fc.2.weight', 'conv3.8.conv1.weight', 'conv4.0.weight', 'conv4.0.bias', 'conv4.1.weight', 'conv4.1.bias', 'conv4.1.running_mean', 'conv4.1.running_var', 'conv4.1.num_batches_tracked', 'conv4.3.weight', 'conv4.3.bias', 'conv4.4.weight', 'conv4.4.bias', 'conv4.4.running_mean', 'conv4.4.running_var', 'conv4.4.num_batches_tracked', 'conv4.7.fc.0.weight', 'conv4.7.fc.2.weight', 'conv4.8.conv1.weight', 'branches.0.fc_layers.0.weight', 'branches.0.fc_layers.0.bias', 'branches.0.fc_layers.1.weight', 'branches.0.fc_layers.1.bias', 'branches.0.fc_layers.1.running_mean', 'branches.0.fc_layers.1.running_var', 'branches.0.fc_layers.1.num_batches_tracked', 'branches.0.fc_layers.4.weight', 'branches.0.fc_layers.4.bias', 'branches.0.fc_layers.5.weight', 'branches.0.fc_layers.5.bias', 'branches.0.fc_layers.5.running_mean', 'branches.0.fc_layers.5.running_var', 'branches.0.fc_layers.5.num_batches_tracked', 'branches.0.fc_layers.8.weight', 'branches.0.fc_layers.8.bias', 'branches.0.fc_layers.9.weight', 'branches.0.fc_layers.9.bias', 'branches.0.fc_layers.9.running_mean', 'branches.0.fc_layers.9.running_var', 'branches.0.fc_layers.9.num_batches_tracked', 'branches.0.fc_layers.12.weight', 'branches.0.fc_layers.12.bias', 'branches.1.fc_layers.0.weight', 'branches.1.fc_layers.0.bias', 'branches.1.fc_layers.1.weight', 'branches.1.fc_layers.1.bias', 'branches.1.fc_layers.1.running_mean', 'branches.1.fc_layers.1.running_var', 'branches.1.fc_layers.1.num_batches_tracked', 'branches.1.fc_layers.4.weight', 'branches.1.fc_layers.4.bias', 'branches.1.fc_layers.5.weight', 'branches.1.fc_layers.5.bias', 'branches.1.fc_layers.5.running_mean', 'branches.1.fc_layers.5.running_var', 'branches.1.fc_layers.5.num_batches_tracked', 'branches.1.fc_layers.8.weight', 'branches.1.fc_layers.8.bias', 'branches.1.fc_layers.9.weight', 'branches.1.fc_layers.9.bias', 'branches.1.fc_layers.9.running_mean', 'branches.1.fc_layers.9.running_var', 'branches.1.fc_layers.9.num_batches_tracked', 'branches.1.fc_layers.12.weight', 'branches.1.fc_layers.12.bias', 'branches.2.fc_layers.0.weight', 'branches.2.fc_layers.0.bias', 'branches.2.fc_layers.1.weight', 'branches.2.fc_layers.1.bias', 'branches.2.fc_layers.1.running_mean', 'branches.2.fc_layers.1.running_var', 'branches.2.fc_layers.1.num_batches_tracked', 'branches.2.fc_layers.4.weight', 'branches.2.fc_layers.4.bias', 'branches.2.fc_layers.5.weight', 'branches.2.fc_layers.5.bias', 'branches.2.fc_layers.5.running_mean', 'branches.2.fc_layers.5.running_var', 'branches.2.fc_layers.5.num_batches_tracked', 'branches.2.fc_layers.8.weight', 'branches.2.fc_layers.8.bias', 'branches.2.fc_layers.9.weight', 'branches.2.fc_layers.9.bias', 'branches.2.fc_layers.9.running_mean', 'branches.2.fc_layers.9.running_var', 'branches.2.fc_layers.9.num_batches_tracked', 'branches.2.fc_layers.12.weight', 'branches.2.fc_layers.12.bias', 'branches.3.fc_layers.0.weight', 'branches.3.fc_layers.0.bias', 'branches.3.fc_layers.1.weight', 'branches.3.fc_layers.1.bias', 'branches.3.fc_layers.1.running_mean', 'branches.3.fc_layers.1.running_var', 'branches.3.fc_layers.1.num_batches_tracked', 'branches.3.fc_layers.4.weight', 'branches.3.fc_layers.4.bias', 'branches.3.fc_layers.5.weight', 'branches.3.fc_layers.5.bias', 'branches.3.fc_layers.5.running_mean', 'branches.3.fc_layers.5.running_var', 'branches.3.fc_layers.5.num_batches_tracked', 'branches.3.fc_layers.8.weight', 'branches.3.fc_layers.8.bias', 'branches.3.fc_layers.9.weight', 'branches.3.fc_layers.9.bias', 'branches.3.fc_layers.9.running_mean', 'branches.3.fc_layers.9.running_var', 'branches.3.fc_layers.9.num_batches_tracked', 'branches.3.fc_layers.12.weight', 'branches.3.fc_layers.12.bias'])\n"
+      "odict_keys(['conv1.0.weight', 'conv1.0.bias', 'conv1.1.weight', 'conv1.1.bias', 'conv1.1.running_mean', 'conv1.1.running_var', 'conv1.1.num_batches_tracked', 'conv1.3.weight', 'conv1.3.bias', 'conv1.4.weight', 'conv1.4.bias', 'conv1.4.running_mean', 'conv1.4.running_var', 'conv1.4.num_batches_tracked', 'conv1.7.conv1.weight', 'conv1.7.conv2.weight', 'conv1.8.conv1.weight', 'conv1.8.conv2.weight', 'conv2.0.weight', 'conv2.0.bias', 'conv2.1.weight', 'conv2.1.bias', 'conv2.1.running_mean', 'conv2.1.running_var', 'conv2.1.num_batches_tracked', 'conv2.3.weight', 'conv2.3.bias', 'conv2.4.weight', 'conv2.4.bias', 'conv2.4.running_mean', 'conv2.4.running_var', 'conv2.4.num_batches_tracked', 'conv2.7.conv1.weight', 'conv2.7.conv2.weight', 'conv2.8.conv1.weight', 'conv2.8.conv2.weight', 'conv3.0.weight', 'conv3.0.bias', 'conv3.1.weight', 'conv3.1.bias', 'conv3.1.running_mean', 'conv3.1.running_var', 'conv3.1.num_batches_tracked', 'conv3.3.weight', 'conv3.3.bias', 'conv3.4.weight', 'conv3.4.bias', 'conv3.4.running_mean', 'conv3.4.running_var', 'conv3.4.num_batches_tracked', 'conv3.7.conv1.weight', 'conv3.7.conv2.weight', 'conv3.8.conv1.weight', 'conv3.8.conv2.weight', 'conv4.0.weight', 'conv4.0.bias', 'conv4.1.weight', 'conv4.1.bias', 'conv4.1.running_mean', 'conv4.1.running_var', 'conv4.1.num_batches_tracked', 'conv4.3.weight', 'conv4.3.bias', 'conv4.4.weight', 'conv4.4.bias', 'conv4.4.running_mean', 'conv4.4.running_var', 'conv4.4.num_batches_tracked', 'conv4.7.conv1.weight', 'conv4.7.conv2.weight', 'conv4.8.conv1.weight', 'conv4.8.conv2.weight', 'branches.0.fc_layers.0.weight', 'branches.0.fc_layers.0.bias', 'branches.0.fc_layers.1.weight', 'branches.0.fc_layers.1.bias', 'branches.0.fc_layers.1.running_mean', 'branches.0.fc_layers.1.running_var', 'branches.0.fc_layers.1.num_batches_tracked', 'branches.0.fc_layers.4.weight', 'branches.0.fc_layers.4.bias', 'branches.0.fc_layers.5.weight', 'branches.0.fc_layers.5.bias', 'branches.0.fc_layers.5.running_mean', 'branches.0.fc_layers.5.running_var', 'branches.0.fc_layers.5.num_batches_tracked', 'branches.0.fc_layers.8.weight', 'branches.0.fc_layers.8.bias', 'branches.0.fc_layers.9.weight', 'branches.0.fc_layers.9.bias', 'branches.0.fc_layers.9.running_mean', 'branches.0.fc_layers.9.running_var', 'branches.0.fc_layers.9.num_batches_tracked', 'branches.0.fc_layers.12.weight', 'branches.0.fc_layers.12.bias', 'branches.0.fc_layers.13.weight', 'branches.0.fc_layers.13.bias', 'branches.0.fc_layers.13.running_mean', 'branches.0.fc_layers.13.running_var', 'branches.0.fc_layers.13.num_batches_tracked', 'branches.0.fc_layers.16.weight', 'branches.0.fc_layers.16.bias', 'branches.0.fc_layers.17.weight', 'branches.0.fc_layers.17.bias', 'branches.0.fc_layers.17.running_mean', 'branches.0.fc_layers.17.running_var', 'branches.0.fc_layers.17.num_batches_tracked', 'branches.0.fc_layers.20.weight', 'branches.0.fc_layers.20.bias', 'branches.0.fc_layers.21.weight', 'branches.0.fc_layers.21.bias', 'branches.0.fc_layers.21.running_mean', 'branches.0.fc_layers.21.running_var', 'branches.0.fc_layers.21.num_batches_tracked', 'branches.0.fc_layers.24.weight', 'branches.0.fc_layers.24.bias', 'branches.1.fc_layers.0.weight', 'branches.1.fc_layers.0.bias', 'branches.1.fc_layers.1.weight', 'branches.1.fc_layers.1.bias', 'branches.1.fc_layers.1.running_mean', 'branches.1.fc_layers.1.running_var', 'branches.1.fc_layers.1.num_batches_tracked', 'branches.1.fc_layers.4.weight', 'branches.1.fc_layers.4.bias', 'branches.1.fc_layers.5.weight', 'branches.1.fc_layers.5.bias', 'branches.1.fc_layers.5.running_mean', 'branches.1.fc_layers.5.running_var', 'branches.1.fc_layers.5.num_batches_tracked', 'branches.1.fc_layers.8.weight', 'branches.1.fc_layers.8.bias', 'branches.1.fc_layers.9.weight', 'branches.1.fc_layers.9.bias', 'branches.1.fc_layers.9.running_mean', 'branches.1.fc_layers.9.running_var', 'branches.1.fc_layers.9.num_batches_tracked', 'branches.1.fc_layers.12.weight', 'branches.1.fc_layers.12.bias', 'branches.1.fc_layers.13.weight', 'branches.1.fc_layers.13.bias', 'branches.1.fc_layers.13.running_mean', 'branches.1.fc_layers.13.running_var', 'branches.1.fc_layers.13.num_batches_tracked', 'branches.1.fc_layers.16.weight', 'branches.1.fc_layers.16.bias', 'branches.1.fc_layers.17.weight', 'branches.1.fc_layers.17.bias', 'branches.1.fc_layers.17.running_mean', 'branches.1.fc_layers.17.running_var', 'branches.1.fc_layers.17.num_batches_tracked', 'branches.1.fc_layers.20.weight', 'branches.1.fc_layers.20.bias', 'branches.1.fc_layers.21.weight', 'branches.1.fc_layers.21.bias', 'branches.1.fc_layers.21.running_mean', 'branches.1.fc_layers.21.running_var', 'branches.1.fc_layers.21.num_batches_tracked', 'branches.1.fc_layers.24.weight', 'branches.1.fc_layers.24.bias', 'branches.2.fc_layers.0.weight', 'branches.2.fc_layers.0.bias', 'branches.2.fc_layers.1.weight', 'branches.2.fc_layers.1.bias', 'branches.2.fc_layers.1.running_mean', 'branches.2.fc_layers.1.running_var', 'branches.2.fc_layers.1.num_batches_tracked', 'branches.2.fc_layers.4.weight', 'branches.2.fc_layers.4.bias', 'branches.2.fc_layers.5.weight', 'branches.2.fc_layers.5.bias', 'branches.2.fc_layers.5.running_mean', 'branches.2.fc_layers.5.running_var', 'branches.2.fc_layers.5.num_batches_tracked', 'branches.2.fc_layers.8.weight', 'branches.2.fc_layers.8.bias', 'branches.2.fc_layers.9.weight', 'branches.2.fc_layers.9.bias', 'branches.2.fc_layers.9.running_mean', 'branches.2.fc_layers.9.running_var', 'branches.2.fc_layers.9.num_batches_tracked', 'branches.2.fc_layers.12.weight', 'branches.2.fc_layers.12.bias', 'branches.2.fc_layers.13.weight', 'branches.2.fc_layers.13.bias', 'branches.2.fc_layers.13.running_mean', 'branches.2.fc_layers.13.running_var', 'branches.2.fc_layers.13.num_batches_tracked', 'branches.2.fc_layers.16.weight', 'branches.2.fc_layers.16.bias', 'branches.2.fc_layers.17.weight', 'branches.2.fc_layers.17.bias', 'branches.2.fc_layers.17.running_mean', 'branches.2.fc_layers.17.running_var', 'branches.2.fc_layers.17.num_batches_tracked', 'branches.2.fc_layers.20.weight', 'branches.2.fc_layers.20.bias', 'branches.2.fc_layers.21.weight', 'branches.2.fc_layers.21.bias', 'branches.2.fc_layers.21.running_mean', 'branches.2.fc_layers.21.running_var', 'branches.2.fc_layers.21.num_batches_tracked', 'branches.2.fc_layers.24.weight', 'branches.2.fc_layers.24.bias', 'branches.3.fc_layers.0.weight', 'branches.3.fc_layers.0.bias', 'branches.3.fc_layers.1.weight', 'branches.3.fc_layers.1.bias', 'branches.3.fc_layers.1.running_mean', 'branches.3.fc_layers.1.running_var', 'branches.3.fc_layers.1.num_batches_tracked', 'branches.3.fc_layers.4.weight', 'branches.3.fc_layers.4.bias', 'branches.3.fc_layers.5.weight', 'branches.3.fc_layers.5.bias', 'branches.3.fc_layers.5.running_mean', 'branches.3.fc_layers.5.running_var', 'branches.3.fc_layers.5.num_batches_tracked', 'branches.3.fc_layers.8.weight', 'branches.3.fc_layers.8.bias', 'branches.3.fc_layers.9.weight', 'branches.3.fc_layers.9.bias', 'branches.3.fc_layers.9.running_mean', 'branches.3.fc_layers.9.running_var', 'branches.3.fc_layers.9.num_batches_tracked', 'branches.3.fc_layers.12.weight', 'branches.3.fc_layers.12.bias', 'branches.3.fc_layers.13.weight', 'branches.3.fc_layers.13.bias', 'branches.3.fc_layers.13.running_mean', 'branches.3.fc_layers.13.running_var', 'branches.3.fc_layers.13.num_batches_tracked', 'branches.3.fc_layers.16.weight', 'branches.3.fc_layers.16.bias', 'branches.3.fc_layers.17.weight', 'branches.3.fc_layers.17.bias', 'branches.3.fc_layers.17.running_mean', 'branches.3.fc_layers.17.running_var', 'branches.3.fc_layers.17.num_batches_tracked', 'branches.3.fc_layers.20.weight', 'branches.3.fc_layers.20.bias', 'branches.3.fc_layers.21.weight', 'branches.3.fc_layers.21.bias', 'branches.3.fc_layers.21.running_mean', 'branches.3.fc_layers.21.running_var', 'branches.3.fc_layers.21.num_batches_tracked', 'branches.3.fc_layers.24.weight', 'branches.3.fc_layers.24.bias'])\n"
      ]
     }
    ],
@@ -126,7 +126,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>yolov8-no-reclassification</td>\n",
-       "      <td>0.5</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.6612</td>\n",
        "      <td>0.8792</td>\n",
        "      <td>0.9131</td>\n",
@@ -135,11 +135,83 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>yolov8-Reclassified</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.6498</td>\n",
+       "      <td>0.8578</td>\n",
+       "      <td>0.8933</td>\n",
+       "      <td>0.8997</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>yolov8-no-reclassification</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>0.6612</td>\n",
+       "      <td>0.8792</td>\n",
+       "      <td>0.9131</td>\n",
+       "      <td>0.9185</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>yolov8-Reclassified</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>0.6538</td>\n",
+       "      <td>0.8652</td>\n",
+       "      <td>0.9009</td>\n",
+       "      <td>0.9031</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>yolov8-no-reclassification</td>\n",
        "      <td>0.5</td>\n",
-       "      <td>0.6522</td>\n",
-       "      <td>0.8600</td>\n",
-       "      <td>0.8930</td>\n",
-       "      <td>0.9003</td>\n",
+       "      <td>0.6612</td>\n",
+       "      <td>0.8792</td>\n",
+       "      <td>0.9131</td>\n",
+       "      <td>0.9185</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>yolov8-Reclassified</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.6530</td>\n",
+       "      <td>0.8651</td>\n",
+       "      <td>0.8963</td>\n",
+       "      <td>0.9046</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>yolov8-no-reclassification</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>0.6612</td>\n",
+       "      <td>0.8792</td>\n",
+       "      <td>0.9131</td>\n",
+       "      <td>0.9185</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>yolov8-Reclassified</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>0.6520</td>\n",
+       "      <td>0.8608</td>\n",
+       "      <td>0.8974</td>\n",
+       "      <td>0.9041</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>yolov8-no-reclassification</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.6612</td>\n",
+       "      <td>0.8792</td>\n",
+       "      <td>0.9131</td>\n",
+       "      <td>0.9185</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>yolov8-Reclassified</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.6515</td>\n",
+       "      <td>0.8632</td>\n",
+       "      <td>0.8990</td>\n",
+       "      <td>0.9028</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -147,8 +219,16 @@
       ],
       "text/plain": [
        "                     Ablation  Alpha  binary   class   genus  species\n",
-       "0  yolov8-no-reclassification    0.5  0.6612  0.8792  0.9131   0.9185\n",
-       "1         yolov8-Reclassified    0.5  0.6522  0.8600  0.8930   0.9003"
+       "0  yolov8-no-reclassification    0.0  0.6612  0.8792  0.9131   0.9185\n",
+       "1         yolov8-Reclassified    0.0  0.6498  0.8578  0.8933   0.8997\n",
+       "2  yolov8-no-reclassification    0.2  0.6612  0.8792  0.9131   0.9185\n",
+       "3         yolov8-Reclassified    0.2  0.6538  0.8652  0.9009   0.9031\n",
+       "4  yolov8-no-reclassification    0.5  0.6612  0.8792  0.9131   0.9185\n",
+       "5         yolov8-Reclassified    0.5  0.6530  0.8651  0.8963   0.9046\n",
+       "6  yolov8-no-reclassification    0.8  0.6612  0.8792  0.9131   0.9185\n",
+       "7         yolov8-Reclassified    0.8  0.6520  0.8608  0.8974   0.9041\n",
+       "8  yolov8-no-reclassification    1.0  0.6612  0.8792  0.9131   0.9185\n",
+       "9         yolov8-Reclassified    1.0  0.6515  0.8632  0.8990   0.9028"
       ]
      },
      "execution_count": 3,
@@ -245,7 +325,7 @@
     "# Paths and setup\n",
     "classes_file = 'datasets/EMVSD/EMVSD/classes.txt'\n",
     "ablations = ['yolov8']\n",
-    "alpha_values = [0.5]\n",
+    "alpha_values = [0, 0.2, 0.5, 0.8, 1]\n",
     "\n",
     "# Run experiments and collect results\n",
     "results = []\n",
